# cmake_playground

./: .gitignore  CMakeLists.txt  gitversion.cmake  version.cmake
cmake/: gitversion.cmake  gitversion.h.in
src/: gitversion.h.in  main.c  version.h.in
